--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <div class="nav">
             <ul class="main-menu">
                 <li class="main-menu-item">
-                    <a href="/portfolio">Portfolio</a>
+                    <a href="https://rockij.github.io/portfolio">Portfolio</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="/portfolio/blog">Skill Blog</a>
+                    <a href="https://rockij.github.io/blog">Skill Blog</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="/portfolio/asby">Accessibility</a>
+                    <a href="https://rockij.github.io/asby">Accessibility</a>
                 </li>
             </ul>
         </div>
@@ -120,7 +120,7 @@
             <div>
                 <div class="mix box-item sample">
                     <h2 class="text">
-                        <a href="../blog/worksource/popup/accessible_modal_dialog.html" target="_blank">접근성 모달 윈도우</a>
+                        <a href=".https://rockij.github.io/blog/popup/accessible_modal_dialog.html" target="_blank">접근성 모달 윈도우</a>
                     </h2>
                 </div>
             </div>
