--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <div class="mix box-item sample">
                     <h2 class="text">
                         <a href="dialog_focus_trapping.html" target="_blank">요소 내부에 포커스를 잡기 위한 CSS 접근 방식</a>
+                        <a href="https://css-tricks.com/a-css-approach-to-trap-focus-inside-of-an-element/" target="_blank" rel="help">참고</a>
                     </h2>
                 </div>
                 <div class="mix box-item sample">
@@ -228,7 +229,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-<script src="../global/resources/js/global.js"></script>
 <script src="https://rockij.github.io/portfolio/resource/js/design.js"></script>
 <script>
 $(document).ready(function() {
