--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
 </header>
 <!-- /header -->
 
+<!-- 
+/**
+    * 유투브 AOA11Y 시청
+    * ! 리플로우(AA)
+**/
+ -->
+
 <section class="work-box">
     <div class="container">
         <div class="row">
@@ -73,6 +80,8 @@
                             <li>단일 태그의 마무리는 항상 / 를 넣어준다</li>
                             <li>색상은 rgba코드로 기정(문자열 구성은 색각이상자가 인식이 불가능)</li>
                             <li>voice-over에서 a태그 접근성 개선 &lt;a&gt;&lt;span&gt;&lt;/span&gt;&lt;div role="text"&gt;&lt;/div&gt;&lt;/a&gt;</li>
+                            <li>자동완성 UI구현시 aria-live를 활용하여 자동완성 목록의 수를 제공하면 시각장애가 있더라도 화면낭독기를 통해 자동완성 기능의 동작을 명확하게 인식할 수 있다.</li>
+                            <li>탭 컨텐츠 숨길시 hidden attribute를 활용</li>
                             <!-- <li> <a href="" target="_blank">참고</a></li> -->
                         </ul>
                     </div>
