--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
 <!-- 
 /**
-    * 유투브 AOA11Y 시청
-    * ! 리플로우(AA)
+    * 유투브 AOA11Y
+    * ! 리플로우(AA) 까지 시청
 **/
  -->
 
@@ -82,6 +82,13 @@
                             <li>voice-over에서 a태그 접근성 개선 &lt;a&gt;&lt;span&gt;&lt;/span&gt;&lt;div role="text"&gt;&lt;/div&gt;&lt;/a&gt;</li>
                             <li>자동완성 UI구현시 aria-live를 활용하여 자동완성 목록의 수를 제공하면 시각장애가 있더라도 화면낭독기를 통해 자동완성 기능의 동작을 명확하게 인식할 수 있다.</li>
                             <li>탭 컨텐츠 숨길시 hidden attribute를 활용</li>
+                            <li>
+                                리플로우
+                                <ul>
+                                    <li>400%확대 하더라도 가로 스크롤바가 생기지 않도록 한다</li>
+                                    <li>예외상황 : 이미지, 지도, 다이어그램, 비더오, 게임 등 2차원 레이아웃을 필요로 하는 콘텐츠</li>
+                                </ul>
+                            </li>
                             <!-- <li> <a href="" target="_blank">참고</a></li> -->
                         </ul>
                     </div>
