--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- 
 /**
     * 유투브 AOA11Y
-    * ! 리플로우(AA) 까지 시청
+    * ! 탭 콘텐츠 접근성 향상 시키기! #12  까지 시청
 **/
  -->
 
@@ -98,6 +98,11 @@
 
             <!-- 가이드 -->
             <div>
+                <div class="mix box-item sample">
+                    <h2 class="text">
+                        <a href="sample_tab_content.html" target="_blank">탭 콘텐츠 접근성 향상</a>
+                    </h2>
+                </div>
                 <div class="mix box-item sample">
                     <h2 class="text">
                         <a href="dialog_focus_trapping.html" target="_blank">요소 내부에 포커스를 잡기 위한 CSS 접근 방식</a>
