--- a/index.html
+++ b/index.html
@@ -66,9 +66,17 @@
                         <ul>
                             <li>명도대비 검사기 <a href="https://webaim.org/resources/contrastchecker/" target="_blank">연결</a></li>
                             <li>웹접근성 평가도구 <a href="https://wave.webaim.org/" target="_blank">연결</a></li>
+                            <li>웹접근성 문제수정 (Accessibility Insights) <a href="https://accessibilityinsights.io/" target="_blank">연결</a></li>
+                            <li>gulp를 사용한 평가도구 gulp-axe-webdriver <a href="https://github.com/felixzapata/gulp-axe-webdriver/" target="_blank">연결</a></li>
                             <li>반응형 팝업 가장 좋은 여백 크기는 margin:10vw; padding:10vw;</li>
                             <li>접근성 향상위해 :focus > :focus-visible <a href="basic/css_focus-visible(instead-focus).html" target="_blank">참고</a></li>
-                            <li>링크타켓 주위로 최소 10px 여백을 둔다</li>
+                            <li>
+                                실행영역
+                                <ul>
+                                    <li>타켓 주위로 최소 10px 여백을 둔다</li>
+                                    <li>최소 가로세로 길이 44px <a href="https://www.youtube.com/watch?v=hS0LuHaIlkk" target="_blank">참고</a></li>
+                                </ul>
+                            </li>
                             <li>폰트사이즈의 기본은 14px 이상</li>
                             <li>단일 태그의 마무리는 항상 / 를 넣어준다</li>
                             <li>색상은 rgba코드로 기정(문자열 구성은 색각이상자가 인식이 불가능)</li>
@@ -94,6 +102,23 @@
                             </li>
                             <li>마우스 호버시에 적용되는 컨텐츠는 포커스시에도 적용이 되어야 한다 <a href="https://www.youtube.com/watch?v=fAX-YWWx4Lk" target="_blank">참고</a></li>
                             <li>시간제한 알림은 시간연장 버튼을 추가하고, aria-live을 이용해 안내제공 <a href="https://www.youtube.com/watch?v=JN7iViOotbc" target="_blank">참고</a></li>
+                            <li>
+                                인터랙션 애니메이션
+                                <ul>
+                                    <li>정지 추가 <a href="https://www.youtube.com/watch?v=GfapzIHqq9U" target="_blank">참고</a></li>
+                                    <li>prefers-reduced-motion: reduce (css media) (only firefox, safari) 를 통해 정적인 이미지 제공 가능</li>
+                                </ul>                                
+                            <li>동시 입력 매커니즘 고려 (키보드접근, 문자단추키, 레이블과 접근 가능한 이름)</li>
+                            <li>
+                                aria-lable
+                                <ul>
+                                    <li>이미지나 아이콘등 숨김 텍스트가 필요한 곳에 대신 사용</li>
+                                    <li>p, i, u, del, span, div..에 텍스트가 있다면 우선순위로 텍스트를 읽는다</li>
+                                    <li>문구는 간력하게 하고 길어야할 경우 aria-describedby 사용</li>
+                                </ul>
+                            </li>
+                            <li>aria-live 활용하여 사용자를 고려한 상태메시지 <a href="https://www.youtube.com/watch?v=Bsj2s58GvVA" target="_blank">참고</a></li>
+                            <li>datepicker 적용 (ex:대한항공) <a href="https://www.youtube.com/watch?v=ovUMyi-pcbQ" target="_blank">참고</a></li>
                             <!-- <li> <a href="" target="_blank">참고</a></li> -->
                         </ul>
                     </div>
