--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                             </li>
                             <li>aria-live 활용하여 사용자를 고려한 상태메시지 <a href="https://www.youtube.com/watch?v=Bsj2s58GvVA" target="_blank">참고</a></li>
                             <li>datepicker 적용 (ex:대한항공) <a href="https://www.youtube.com/watch?v=ovUMyi-pcbQ" target="_blank">참고</a></li>
+                            <li>별점표시 '별다섯개중 몇개'</li>
                             <!-- <li> <a href="" target="_blank">참고</a></li> -->
                         </ul>
                     </div>
