--- a/sample_markup.html
+++ b/sample_markup.html
@@ -22,18 +22,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.2.3/ionicons.min.js"></script>
-<title></title>
+<title>해당 페이지 고유의 정보를 이해할 수 있는 제목, 특수문자X</title>
 <style>
-/*
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Anonymous Pro', sans-serif;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Courier Prime', monospace;
-    font-family: 'Oleo Script', cursive;
-    font-family: 'Open Sans', sans-serif;
-    font-family: "Roboto", sans-serif;
-    font-family: 'Quicksand', sans-serif;
-*/
 .a11y{
     position: absolute;
     width: 1px;
@@ -64,10 +54,24 @@
 </div>
 
 <!-- 폼레이블 -->
-<label for="aa">First Name <span class="a11y">Required</span></label>
-<span class="placeholder" id="bb">ex) GIL DONG</span>
-<input type="text" id="aa" aria-describedby="bb error-txt">
-<p id="error-txt">This information is required.</p>
+<form aria-labelledby="contact">
+    <fieldset>
+        <legend id="contact">제목</legend>
+        <label for="aa">First Name <span class="a11y">Required</span></label>
+        <span class="placeholder" id="bb">ex) GIL DONG</span>
+        <input type="text" id="aa" aria-describedby="bb error-txt">
+        <p id="error-txt">This information is required.</p>
+    </fieldset>
+</form>
+<div role="form" aria-labelledby="contact">
+    <fieldset>
+        <legend id="contact">제목</legend>
+        <label for="aa">First Name <span class="a11y">Required</span></label>
+        <span class="placeholder" id="bb">ex) GIL DONG</span>
+        <input type="text" id="aa" aria-describedby="bb error-txt">
+        <p id="error-txt">This information is required.</p>
+    </fieldset>
+</div>
 
 <!-- 로딩 -->
 <div id="loading-start" aria-live="assertive" role="alert"></div>
@@ -79,7 +83,43 @@
 <!-- 
     loading-start에 로딩이 시작되었다는 안내문구 추가되고
     로딩이 끝난시점에 loading-end 에 종료안내 문구가 추가되어야한다
- -->
+-->
+
+<!-- 레이어팝업 -->
+<div role="dialog" aria-labelledby="title-dialog" aria-describedby="desc-txt">
+    <div role="document" tabindex="-1">
+        <h2 id="title-dialog">제목 title-dialog 연결</h2>
+        <p id="desc-txt">
+            주요내용 aria-describedby 연결,
+            팝업안에 폼요소가 있다면 제일 위 폼 요소에 포커스가 가도록
+        </p>
+    </div>
+</div>
+
+<!--
+    확장축소(accordion)
+    aria-expanded 통해 스크린리더에서 읽어주기 때문에 '확장되었다' 같은 숨김 텍스트는 불필요
+-->
+<button aria-controls="site-select" aria-expanded="ture">버튼선택</button>
+<div id="site-select" aria-hidden="false">
+    숨겨져있던 내용
+</div>
+
+<!--
+    th영역에 정렬 버튼이 있는 테이블
+    aria-sort 속성 값으로 오름차순 ascending과 내림차순 descending, 정렬되지 않은 상태 none
+    none상태일 때는 아무것도 읽지 않으므로 정렬할 수 있음을 title 속성을 사용하여 알릴 수 있다.
+-->
+<table>
+    <thead>
+        <tr>
+            <th scope="col" aria-sort="descending"></th>
+            <th scope="col" aria-sort="none">
+                <a href="#" role="button" title="Sort in ascending order"></a>
+            </th>
+        </tr>
+    </thead>
+</table>
 
 <script>
 </script>
