--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                             </li>
                             <li>title 속성은 툴팁에 적절할 것 같은 조언 정보를 나타내므로 접근성 측면에선 aria-label 권장</li>
                             <li>윈도우 고대비 모드 Shift+Alt+PrtSc, 색에 무관한 콘텐츠 인식 <a href="https://www.youtube.com/watch?v=ws-rs2HSF5A" target="_blank">참고</a></li>
+                            <li>리스트 형태의 많은 li가 있더라도 하나의 ul안에 들어가도록 한다</li>
                             <!-- <li> <a href="" target="_blank">참고</a></li> -->
                         </ul>
                     </div>
