--- a/sample_markup.html
+++ b/sample_markup.html
@@ -121,6 +121,53 @@
     </thead>
 </table>
 
+<!--
+    자동완성 https://www.youtube.com/watch?v=uZ5ttPknnJw
+    aria-owns 나와 내 아이들과의 연결고리
+    aria-activedescendant 현재 선택된 내 아이
+-->
+<!-- 
+    키보드 환경
+    Alt + 아래 방향키 : 비어있는 input에서 리스트가 닫혀있을 때 열린다
+    Enter or Space bar : 리스에서 Enter와 Space bar를 누르면 항목은 선택되고 리스트는 닫힌다
+    상하 방향키 : 리스트 내에서 위아래로 탐색한다
+    ESC : 리스트박스가 닫히고 input내의 텍스트는 삭제
+    비어있는 input에 알파벳을 한 개씩 누르면 매칭되는 결과값만 리스트에 남는다
+-->
+<input type="text" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="결과 리스트박스 id" aria-activedescendant="선택된 리스트박스의 옵션 id">
+<!-- 검색결과 읽는 영역 -->
+<div role="status" aria-live="polite"></div>
+<ul role="listbox" id="xxx"> <!-- aria-owns 와 id 연결 -->
+    <li role="option" aria-selected="true">선택옵션1</li>
+    <li role="option" aria-selected="false">선택옵션2</li>
+    <li role="option" aria-selected="false">선택옵션3</li>
+</ul>
+
+<!-- 네비게이션 -->
+<!-- https://www.youtube.com/watch?v=SbZvCEivRMc -->
+<nav aria-label="마이페이지">
+    <ul class="depth-1" role="menubar">
+        <li role="menuitem" tabindex="-1">마이페이지</li>
+        <li role="menuitem" aria-haspopup="true" aria-expanded="false" aria-controls="menu1" tabindex="-1">
+            나의 마일리지
+            <ul role="menu" id="menu1">
+                <li role="menuitem" tabindex="-1">마일리지 현황</li>
+                <li role="menuitem" tabindex="-1">마일리지 상세</li>
+                <li role="menuitem" tabindex="-1">마일리지 신청</li>
+            </ul>
+        </li>
+        <li role="menuitem" tabindex="0">마이페이지</li>
+        <li role="menuitem" aria-haspopup="true" aria-expanded="true" aria-controls="menu1" tabindex="0">
+            나의 마일리지
+            <ul role="menu" id="menu2">
+                <li role="menuitem" tabindex="0">마일리지 현황</li>
+                <li role="menuitem" tabindex="0">마일리지 상세</li>
+                <li role="menuitem" tabindex="0">마일리지 신청</li>
+            </ul>
+        </li>
+    </ul>
+</nav>
+
 <script>
 </script>
 
