--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
             <div>
                 <div class="mix box-item sample">
                     <h2 class="text">
+                        <a href="sample_accordion.html" target="_blank">아코디언 패턴 구현</a>
+                    </h2>
+                </div>
+                <div class="mix box-item sample">
+                    <h2 class="text">
                         <a href="sample_slider_컴포넌트.html" target="_blank">커스텀 slider 컴포넌트</a>
                     </h2>
                 </div>
