--- a/sample_accordion.html
+++ b/sample_accordion.html
@@ -34,7 +34,27 @@
     font-family: "Roboto", sans-serif;
     font-family: 'Quicksand', sans-serif;
 */
-body{
+.accordion{
+    border:1px solid #000;
+    border-radius: 10px;
+}
+.accordion__header{
+    display: flex;
+    flex-flow: column;
+    border-top: 1px solid #000;
+}
+.accordion__header:first-child{
+    border-top:0
+}
+.accordion__header > button{
+    border:0;
+    padding: .5em;
+    background-color: transparent;
+    text-align: left;
+}
+.accordion__panel{
+    border-top: 1px solid #000;
+    display: none;
 }
 </style>
 </head>
@@ -44,12 +64,108 @@ body{
     초기에는 모든 패널이 닫혀있고
     단 하나의 패널만 열림
     열려 있는 패널을 재선택 하면 닫히는
+    https://www.youtube.com/watch?v=rAzipoUdcX8
+    https://www.youtube.com/watch?v=bhGiKvmcdTM
  -->
-<div class="accordion">
-    <h2></h2>
-</div>
+
+ <div class="accordion">
+     <h2 id="accordion-header-1" class="accordion__header"><button type="button" aria-expanded="false" aria-controls="accordion-panel-1">메뉴1</button></h2>
+     <div id="accordion-panel-1" class="accordion__panel" role="region" aria-labelledby="accordion-header-1">
+         <ul>
+             <li>메뉴1아이템1</li>
+             <li>메뉴1아이템2</li>
+             <li>메뉴1아이템1</li>
+         </ul>
+     </div>
+     <h2 id="accordion-header-2" class="accordion__header"><button type="button" aria-expanded="false" aria-controls="accordion-panel-2">메뉴2</button></h2>
+     <div id="accordion-panel-2" class="accordion__panel" role="region" aria-labelledby="accordion-header-2">
+         <ul>
+             <li>메뉴2아이템1</li>
+             <li>메뉴2아이템2</li>
+             <li>메뉴2아이템3</li>
+         </ul>
+     </div>
+     <h2 id="accordion-header-3" class="accordion__header"><button type="button" aria-expanded="false" aria-controls="accordion-panel-3">메뉴3</button></h2>
+     <div id="accordion-panel-3" class="accordion__panel" role="region" aria-labelledby="accordion-header-3">
+         <ul>
+             <li>메뉴3아이템1</li>
+             <li>메뉴3아이템2</li>
+             <li>메뉴3아이템3</li>
+         </ul>
+     </div>
+ </div>
 
 <script>
+$('.accordion__header > button').on('click', togglePanel);
+$('.accordion__header > button').on('keydown', bindKey);
+
+function togglePanel(){
+    var $header = $(this).parent('.accordion__header');
+    var $panel = $('#' + this.getAttribute('aria-controls'));
+    toggleCurrentPanel($header, $panel);
+    closeOtherPanels($header, $panel);
+}
+
+function toggleCurrentPanel(currHeader, currPanel){
+    function toggleExpanded(_, val){
+        return val === 'true' ? 'false' : 'true';
+    }
+    $(currHeader).find('button').attr('aria-expanded', toggleExpanded);
+    $(currPanel).slideToggle();
+}
+
+function closeOtherPanels(currHeader, currPanel){
+    var $headers = $('.accordion__header').not(currHeader);
+    var $panels = $('.accordion__panel').not(currPanel);
+    $headers.find('button').attr('aria-expanded', 'false')
+    $panels.slideUp();
+}
+
+function bindKey(event){
+    var key = event.code.toLowerCase();
+    var currHeader = $(this).parent('.accordion__header');
+    switch (key){
+        case 'arrowdown':
+            moveHeader(currHeader, 1);
+            break;
+        case 'arrowup':
+            moveHeader(currHeader, -1);
+            break;
+        case 'home':
+            moveFirstHeader();
+            break;
+        case 'end':
+            moveLastHeader();
+            break;
+    }
+}
+
+function moveHeader(currHeader, direction){
+    var next = null;
+    var $headers = $('.accordion__header');
+    var currIdx = $headers.index(currHeader);
+
+    if(direction > 0){
+        next = $headers[(currIdx + direction) % $headers.length];
+    }else{
+        next = $headers[(currIdx || $headers.length) + direction];
+    }
+
+    setTimeout(function(){
+        $(next).find('button').focus();
+    }, 0)
+}
+
+function moveFirstHeader(){
+    var $firstBtn = $('.accordion__header').eq(0).find('button');
+    $firstBtn.focus();
+}
+
+function moveLastHeader(){
+    var $lastBtn = $('.accordion__header').eq(-1).find('button');
+    $lastBtn.focus();
+}
+
 </script>
 
 </body>
