--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                             <li>
                                 평가도구
                                 <ul>
+                                    <li>NVDA Speech Viewer <a href="https://www.nvaccess.org/download/" target="_blank">연결</a></li>
                                     <li>url로 평가 <a href="https://wave.webaim.org/" target="_blank">연결</a></li>
                                     <li>크롬설치 문제수정 (Accessibility Insights) <a href="https://accessibilityinsights.io/" target="_blank">연결</a></li>
                                     <li>gulp를 사용한 평가도구 gulp-axe-webdriver <a href="https://github.com/felixzapata/gulp-axe-webdriver/" target="_blank">연결</a></li>
