--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                 <div class="mix box-item article">
                     <h2 class="text">
-                        <a href="https://css-tricks.com/newsletter/263-accessibility-round-up/" target="_blank" title="새창열기">접근성 정리</a>
+                        <a href="https://css-tricks.com/newsletter/263-accessibility-round-up/" target="_blank" title="새창열기">css-tricks 접근성 정리</a>
                     </h2>
                 </div>
 
