--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                             <li>
                                 랜드마크
                                 <ul>
+                                    <li>랜드마크에 대해서 <a href="https://www.htmhell.dev/tips/landmarks/" target="_blank">연결</a></li>
                                     <li>baner, main, complementary, contentinfo 최상위 랜드마크</li>
                                     <li>예를들어 main에 baner랜드마크가 들어가있다면 잘못된 랜드마크</li>
                                     <li>여러개의 랜드마크 사용시 aria-label, aria-labelledby 사용</li>
@@ -218,7 +219,7 @@
 
                 <div class="mix box-item article">
                     <h2 class="text">
-                        <a href="https://css-tricks.com/newsletter/263-accessibility-round-up/" target="_blank" title="새창열기">css-tricks 접근성 정리</a>
+                        <a href="https://css-tricks.com/newsletter/263-accessibility-round-up/" target="_blank" title="새창열기">접근성 정리</a>
                     </h2>
                 </div>
 
