--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                             <li>윈도우 고대비 모드 Shift+Alt+PrtSc, 색에 무관한 콘텐츠 인식 <a href="https://www.youtube.com/watch?v=ws-rs2HSF5A" target="_blank">참고</a></li>
                             <li>리스트 형태의 많은 li가 있더라도 하나의 ul안에 들어가도록 한다</li>
                             <li>목록스타일을 제거하면(list-style:none) iOS에서 목록 의미가 제거됨 <a href="https://geoffgraham.me/removing-list-styles-removes-list-semantics-in-ios/" target="_blank">참고</a></li>
+                            <li>CSS 사용자 정의 속성으로 포커스 스타일 표준화하기 <a href="https://css-tricks.com/standardizing-focus-styles-with-css-custom-properties/" target="_blank">연결</a></li>
                             <!-- <li> <a href="" target="_blank">참고</a></li> -->
                         </ul>
                     </div>
