--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
                                 </ul>
                             </li>
                             <li>반응형 팝업 가장 좋은 여백 크기는 margin:10vw; padding:10vw;</li>
-                            <li>접근성 향상위해 :focus > :focus-visible <a href="basic/css_focus-visible(instead-focus).html" target="_blank">참고</a></li>
+                            <li>
+                                focus 초점
+                                <ul>
+                                    <li>:focus {outline:none} 사용지 키보드 초점 이슈가 있다</li>
+                                    <li>:focus-visible 사용시 :focus:not{:focus-visible} 같이 사용 <a href="basic/css_focus-visible(instead-focus).html" target="_blank">참고</a></li>
+                                </ul>
                             <li>
                                 실행영역
                                 <ul>
