--- a/sample_accordion.html
+++ b/sample_accordion.html
@@ -52,6 +52,9 @@
     background-color: transparent;
     text-align: left;
 }
+.accordion__header > button.active{
+    pointer-events: none;
+}
 .accordion__panel{
     border-top: 1px solid #000;
     display: none;
@@ -110,8 +113,11 @@ function toggleCurrentPanel(currHeader, currPanel){
     function toggleExpanded(_, val){
         return val === 'true' ? 'false' : 'true';
     }
-    $(currHeader).find('button').attr('aria-expanded', toggleExpanded);
-    $(currPanel).slideToggle();
+    $(currHeader).find('button').attr('aria-expanded', toggleExpanded).addClass('active');
+    $(currPanel).slideToggle(300);
+    setTimeout(function(){
+        $(currHeader).find('button').removeClass('active')
+    }, 300)
 }
 
 function closeOtherPanels(currHeader, currPanel){
