--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
             <div>
                 <div class="mix box-item sample">
                     <h2 class="text">
+                        <a href="improving_focus_issues_on_link.html" target="_blank">링크의 초점분리 이슈 개선하기</a>
+                    </h2>
+                </div>
+                <div class="mix box-item sample">
+                    <h2 class="text">
                         <a href="sample_accordion.html" target="_blank">아코디언 패턴 구현</a>
                     </h2>
                 </div>
