--- a/index.html
+++ b/index.html
@@ -173,6 +173,16 @@
             <div>
                 <div class="mix box-item sample">
                     <h2 class="text">
+                        <a href="tooltip.html" target="_blank">툴팁 적용</a>
+                    </h2>
+                </div>
+                <div class="mix box-item sample">
+                    <h2 class="text">
+                        <a href="required_item_group.html" target="_blank">그룹명 필수 항목 적용</a>
+                    </h2>
+                </div>
+                <div class="mix box-item sample">
+                    <h2 class="text">
                         <a href="improving_focus_issues_on_link.html" target="_blank">링크의 초점분리 이슈 개선하기</a>
                     </h2>
                 </div>
