--- a/index.html
+++ b/index.html
@@ -229,6 +229,12 @@
             <div>
                 <div class="mix box-item article">
                     <h2 class="text">
+                        <a href="https://www.deque.com/css-tricks/?utm_source=css-tricks&utm_medium=newsletter&utm_campaign=1_17_22" target="_blank" title="새창열기">크롬익스텐션 실치하는 장애인 평가도구 deque</a>
+                    </h2>
+                </div>
+
+                <div class="mix box-item article">
+                    <h2 class="text">
                         <a href="https://www.w3.org/TR/WCAG21/" target="_blank" title="새창열기">웹접근성 컨텐츠 가이드라인</a>
                     </h2>
                 </div>
